Fix index display on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -29,13 +29,31 @@ a{
     color:var(--main-color);
     font-style: italic;
 }
-@media screen and (max-width: 768px) {
-
-    main{
-        padding:0.5rem;
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    padding:2rem;
+    gap: 2.5rem;
+    grid-auto-rows: auto;
+    justify-content: center;
+}
+/* Media query for iOS devices */
+@media only screen 
+  and (max-device-width: 414px) /* iPhone 12 and below width */
+  and (-webkit-min-device-pixel-ratio: 2) 
+  and (orientation: portrait) {
+    .grid-container {
+        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+        padding:1rem;
     }
-    img{
-        height: 200px;
-    }
+}
 
+@media only screen 
+  and (max-device-width: 896px) /* iPhone 12 Pro Max width */
+  and (-webkit-min-device-pixel-ratio: 3) 
+  and (orientation: landscape) {
+    .grid-container {
+        grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+        padding:1.5rem;
+    }
 }
